syntax = "proto3";

package product_service;

option go_package = "genproto/product_service";

import "product.proto";

service ProductService{
    rpc Create(ProductCreateReq) returns (ProductCreateResp) {};
    rpc GetList(ProductGetListReq) returns (ProductGetListResp) {};
    rpc GetById(ProductIdReq) returns (Product) {};
    rpc Update(ProductUpdateReq) returns (ProductUpdateResp) {};
    rpc Delete(ProductIdReq) returns (ProductDeleteResp) {};
}
